# streams

./: .gitignore  CMakeLists.txt  Istream.hpp  LICENSE  OddBuf.cpp  OddBuf.hpp  SwapBuf.cpp  SwapBuf.hpp  main.cpp
